# subtitle-srt-translator

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: test_python_versions.py
src/subtitle_srt_translator/: __init__.py  cache.py  chunking.py  cli.py  env.py  models.py  openai_client.py  pipeline.py  progress.py  srt.py
tests/: test_cache.py  test_chunking.py  test_cli.py  test_env.py  test_openai_client.py  test_pipeline.py  test_progress.py  test_project_metadata.py  test_srt.py
