[project]
name = "subtitle-srt-translator"
version = "0.1.0"
description = "Translate SRT subtitle files with OpenAI Responses API structured outputs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "joblib>=1.5.3",
    "openai>=2.0.0",
    "pydantic>=2.7.0",
]

[project.scripts]
subtitle-srt-translator = "subtitle_srt_translator.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subtitle_srt_translator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
