[project]
name = "subtitle-srt-translator"
version = "0.1.0"
description = "Translate SRT subtitle files with OpenAI Responses API structured outputs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.16"
dependencies = [
    "joblib>=1.5.3",
    "openai>=2.0.0",
    "pydantic>=2.7.0",
]

[project.scripts]
subtitle-srt-translator = "subtitle_srt_translator.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "subtitle_srt_translator"

[tool.pytest.ini_options]
testpaths = ["tests"]
